<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Menu">

    <Button

        android:id="@+id/button3"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/button3"
        tools:text="Barros Luco" />

    <Button
        android:id="@+id/button4"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/button4"
        tools:text="Lomito Italiano" />

    <Button
        android:id="@+id/button5"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/button5"
        tools:text="Mechada" />

    <Button
        android:id="@+id/button6"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/button6"
        tools:text="Churrasco Italiano" />

    <Button
        android:id="@+id/button7"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/button7"
        tools:text="Chacarero" />

</LinearLayout>